# SIckKinematiX

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  forwardKinematics.c  forwardKinematics.h  index.html  inverseKinematics.c  inverseKinematics.h  inverseKinematicsCCD.c  inverseKinematicsCCD.h  kinematics.c  kinematics.h  main.c  mkdocs.yml  pureMath.c  pureMath.h  pyproject.toml  requirements.txt  run_c_tests.sh  setup.py  test.c  vector3DMath.c  vector3DMath.h  vectorMath.c  vectorMath.h
.github/workflows/: ci.yml
api/: index.html
dashboard/: app.py
docs/: api.md  index.md
search/: search_index.json
sickkinematix/: __init__.py
site/: 404.html
site/search/: search_index.json
src/: buildRobot.c  buildRobot.h  buildRobotArm.c  buildRobotArm.h  forwardKinematics.c  forwardKinematics.h  inverseKinematics.c  inverseKinematics.h  jacobian.c  jacobian.h  justMath.c  justMath.h  pureMath.c  pureMath.h  pythonWrapper.c  robot.c  robot.h  robotArm.c  robotArm.h  workspaceAnalysis.c  workspaceAnalysis.h  wrapper.c
tests/: test_forward_kinematics.py  test_inverse_kinematics.py  test_robot_build.py  test_workspace_yoshikawa.py
tests_c/: forwardKinTest.c  forwardKinTest.c.c  inverseKinCCDtest.c  inverseKinDLStest.c  jacobianTest.c  openMPTest.c  openMP_test.c  ramieRobota.h  workspaceAnalysisTest.c  workspaceAnalysistest.c  yoshikawaTest.c
tests_python/: forwardKinTest.py  inverseKinematicsCCD.py  invesrseCCDtest.py  visualizeBetter.py  wizuale.py
