[build-system]
requires = ["setuptools", "numpy>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sickkinematix"
version = "0.0.1"
description = "SICK Kinematics solver in pure C"
authors = [
    { name="Tomek Stolarczyk", email="tomasz.d.stolarczyk@gmail.com" },
]
license = "MIT"
requires-python = ">=3.10"
dependencies = ["numpy>=2.0.0"] # Odkomentujemy to później, jak dodamy NumPy!